# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  step3
.github/workflows/: pyci.yml
gendiff/: argparser.py  cli_args.py  generate_diff.py  generator_output.py  parser.py
gendiff/formatters/: converter_to_string.py  generator_output.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: result_json.txt  test_test.py
