[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "project gendiff"
authors = ["Dmitriy G. <llogginn@gmail.com>"]
repository = "https://github.com/braimm/python-project-50"
readme = "README.md"
packages = [{ include = "gendiff" },]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
pyyaml = "^6.0.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
